# Multi-Robot-simulator

./: .gitignore  README.md  open_all.sh  run_lidar.sh  run_mover.sh  run_simulation.sh
config/: config.json
include/: definitions.h
workspace/.catkin_tools/profiles/default/: devel_collisions.txt
workspace/src/multi_robot_sim/: CMakeLists.txt
workspace/src/multi_robot_sim/include/: definitions.h  lidar.h  robot.h  utils.h  world.h
workspace/src/multi_robot_sim/nodes/: lidar_node.cpp  mover_node.cpp  simulation_node.cpp
workspace/src/multi_robot_sim/src/: lidar.cpp  robot.cpp  utils.cpp  world.cpp
